# httpserver

./: .gitignore  BUILD  BUILD.bzl  CMakeLists.txt  Dockerfile  WORKSPACE
.devcontainer/: devcontainer.json
http_client/: ntimes.sh  test_file_server.py  test_file_server_no_session.py  using_curl.sh
inc/: CentralDataRepo.h  FormRequestHandler.h  GenericHTTPRequestHandlerFactory.h  HTTPServer.h  LogReceiverServer.h  LogReceiverTCPServerConnectionFactory.h  MethodNotSupportedRequestHandler.h  MultiPartHandler.h  NotFoundRequestHandler.h  OptionsRequestHandler.h  StatusRequestHandler.h  status.pb.h
interfaces/: status.proto  vtpl_analytics_app_models.proto
resource/inc/: DummyDataGenerator.hpp  monitoring_thread.hpp  status_sock_handler.hpp
resource/src/: DummyDataGenerator.cpp  EntryPoint.cpp  monitoring_thread.cpp  status_sock_handler.cpp
src/: CentralDataRepo.cpp  EntryPoint.cpp  EntryPoint1.cpp  FormRequestHandler.cpp  GenericHTTPRequestHandlerFactory.cpp  HTTPServer.cpp  LogReceiverServer.cpp  LogReceiverTCPServerConnectionFactory.cpp  MethodNotSupportedRequestHandler.cpp  MultiPartHandler.cpp  NotFoundRequestHandler.cpp  OptionsRequestHandler.cpp  StatusRequestHandler.cpp  main.cpp  status.pb.cc
utils/: CMakeLists.txt
utils/inc/: logging.h
